[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/OQ_Toolkit/OQ_Helpers/OQ_VisibilityToggle.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/OQ_UI2DLogWindow.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/OQ_Toolkit/OQ_ARVRController/Feature_UIRayCast.tscn" type="PackedScene" id=7]
[ext_resource path="res://client/vr_menu_player/VrMenuPlayer.gd" type="Script" id=8]
[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel.tscn" type="PackedScene" id=9]
[ext_resource path="res://client/utils/ShaderCache.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/godot-oculus/scenes/oculus_shader_cache.tscn" type="PackedScene" id=11]

[node name="VrMenuPlayer" type="Spatial"]
script = ExtResource( 8 )

[node name="OQ_ARVROrigin" parent="." instance=ExtResource( 4 )]

[node name="OQ_ARVRCamera" parent="OQ_ARVROrigin" instance=ExtResource( 2 )]

[node name="ShaderCache" parent="OQ_ARVROrigin/OQ_ARVRCamera" instance=ExtResource( 10 )]
transform = Transform( 0.001, 0, 0, 0, 0.001, 0, 0, 0, 0.001, 0, -0.271089, -1.22057 )

[node name="ovr_shader_cache" parent="OQ_ARVROrigin/OQ_ARVRCamera/ShaderCache" instance=ExtResource( 11 )]

[node name="Feature_UIRayCast" parent="OQ_ARVROrigin/OQ_ARVRCamera/ShaderCache" instance=ExtResource( 7 )]

[node name="OQ_LeftController" parent="OQ_ARVROrigin" instance=ExtResource( 1 )]
enable_gesture_to_button = true

[node name="OQ_VisibilityToggle" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.197084, 0 )
invisible_on_start = true

[node name="OQ_UI2DLogWindow" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle" instance=ExtResource( 6 )]
transform = Transform( 0.866025, -0.17101, 0.469846, 0, 0.939693, 0.34202, -0.5, -0.296198, 0.813798, 0, 0, 0 )

[node name="FpsLabel" parent="OQ_ARVROrigin/OQ_LeftController/OQ_VisibilityToggle" instance=ExtResource( 9 )]
transform = Transform( 0.999147, 0, -0.0412827, 0, 1, 0, 0.0412827, 0, 0.999147, 0.630577, 0, -0.282998 )
text = "FPS"
margin = 16
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 1 )
transparent = false

[node name="OQ_RightController" parent="OQ_ARVROrigin" instance=ExtResource( 3 )]
enable_gesture_to_button = true

[node name="Feature_UIRayCast" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 7 )]
ui_raycast_visible_button = -1
